Closed
Bug 457266
Opened 17 years ago
Closed 17 years ago
sampling api test on mac intel/ppc processing samples in debug debugger throws Assertion failed errors
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: dschaffe, Unassigned)
Details
on mac intel/ppc 10.4 and 10.5 the acceptance test tamarin-central/test/acceptance/as3/sampling/ProcessSampling.as prints:
Leaked 16 byte item. Addr: 0x1019068
Assertion failed: "((false))" ("/Users/dschaffe/hg/tamarin-central/MMgc/FixedAlloc.cpp":96)
Assertion failed: "((m_megamap[megamapIndex] == 0))" ("/Users/dschaffe/hg/tamarin-central/MMgc/GCHeap.cpp":168)
Block 0x1117000 not freed
Assertion failed: "((false))" ("/Users/dschaffe/hg/tamarin-central/MMgc/GCHeap.cpp":176)
to reproduce:
avmplus_sd as3/sampling/ProcessSampling.abc
Flags: wanted-flashplayer10+
Flags: in-testsuite+
Flags: flashplayer-triage+
Comment 1•17 years ago
|
||
Can you mark this as known-fail in TC
Reporter | ||
Comment 2•17 years ago
|
||
same problem occurs on windows and linux in debug-debugger. started to fail after tamarin-redux to tamarin-central merge. marking as known failure in TC.
Comment 3•17 years ago
|
||
Pushed fix to TC - also fixed an assert when enableTraces was true.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•