Fix some asserts when sampling is turned on (assert on shutdown, and assert when enableTraces=true) (bug 457266).